# agentfilecoin

./: .gitignore  CHECKLIST.md  COMPILATION_GUIDE.md  ENHANCED_SUMMARY.md  HANDOFF_GUIDE.md  HANDS_ON_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVER_COMPLETE.md  MVP_COMPLETION_REPORT.md  MVP_EXECUTION_REPORT.md  MVP_PLAN.md  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  README.md  config.example.toml
backend/: AGENT_CONTRACT_GUIDE.md  Cargo.toml
backend/examples/: agent_example.rs
backend/src/: config.rs  contracts.rs  filecoin.rs  ipfs.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs
backend/src/contracts/: agent_identity.rs
backend/src/services/: contract_service.rs  mod.rs  nft_scanner.rs
contracts/: foundry.toml
docs/: DESIGN.md  FILECOIN_INTEGRATION.md  NFT_MIGRATION_SYSTEM.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: full-workflow.md
mcp-nft-migration/: .gitignore  CLAUDE_CODE_守护进程配置.md  CLAUDE_CODE_本地配置.md  CLAUDE_CODE_正确配置.md  DAEMON_DEPLOYMENT.md  DAEMON_MODE_DESIGN.md  ERC8004分步骤演示指南.md  ERC8004验证完整指南.md  ERC8004验证测试指南.md  GIT_发布完成.md  HTTP_模式使用指南.md  MCP_进程启动详解.md  MCP_通信模式对比.md  MCP工具快速参考.md  NFT_SCAN_修复完成.md  README.md  STANDALONE_MCP_GUIDE.md  STREAMABLE_HTTP_升级完成.md  daemon.pid  package-lock.json  package.json  stdio模式环境变量配置.md  upload环境变量修复完成.md  一次性修复完成.md  代码环境变量适配完成.md  完成总结.md  快速开始.md  环境变量传递问题分析.md  环境变量同步完成.md
mcp-server/: .env.example  README.md  package.json
mvp-demo/: .env.example  AI_AGENT_CONCEPT.md  ARCHITECTURE_SUMMARY.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  GET_TEST_TOKENS.md  (+66 more)
(+54 files in other folders)
