[package]
name = "agent-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum / Web3
alloy = { version = "1.0", features = ["full"] }
ethers = "2.0"

# IPFS
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }
cid = "0.11"

# Filecoin Storage APIs
reqwest = { version = "0.12", features = ["json", "multipart"] }
lighthouse-client = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
toml = "0.8"

# Crypto
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"

# Utils
dirs = "5.0"
chrono = "0.4"

# MCP Protocol
# mcp-client = { git = "https://github.com/modelcontextprotocol/rust-sdk", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[[bin]]
name = "agent-cli"
path = "src/main.rs"
